--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,22 +1,34 @@
-<h2>Regisztráció</h2>
+<div class="auth-wrapper">
+    <div class="auth-card">
+        <h2>Regisztráció</h2>
 
-<% if (error) { %>
-    <p style='color:red'><%= error %></p>
-<% } %>
+        <% if (error) { %>
+            <div class="error-message">
+                <%= error %>
+            </div>
+        <% } %>
 
-<form method='post' action='/auth/register'>
-    <label for='name'>Név:</label><br>
-    <input type='text' id='name' name='name' required><br><br>
+        <form method="post" action="/auth/register">
+            <div class="form-group">
+                <label for="name">Teljes Név</label>
+                <input type="text" id="name" name="name" placeholder="Pl. Pavarotti Luciano" required>
+            </div>
 
-    <label for='email'>E-mail:</label><br>
-    <input type='email' id='email' name='email' required><br><br>
+            <div class="form-group">
+                <label for="email">E-mail cím</label>
+                <input type="email" id="email" name="email" placeholder="pelda@opera.hu" required>
+            </div>
 
-    <label for='password'>Jelszó:</label><br>
-    <input type='password' id='password' name='password' required><br><br>
+            <div class="form-group">
+                <label for="password">Jelszó</label>
+                <input type="password" id="password" name="password" placeholder="Minimum 6 karakter" required>
+            </div>
 
-    <button type='submit'>Regisztráció</button>
-</form>
+            <button type="submit" class="btn-submit">Fiók Létrehozása</button>
+        </form>
 
-<p>
-    Már van fiókja? <a href="/auth/login">Jelentkezzen be.</a>
-</p>
+        <div class="auth-footer">
+            <p>Már van fiókja? <a href="/auth/login">Jelentkezzen be.</a></p>
+        </div>
+    </div>
+</div>
